--- a/index3.html
+++ b/index3.html
@@ -28,7 +28,7 @@
     		<h4 class="logo">HTML 5 &nbsp;</h4>
     		<nav>
     			<ul>
-        			<li><a href="index2.html">Index</a></li>
+        			<li><a href="index.html">Index</a></li>
         			<li><a href="server_files/Insider/join1.html">Insider</a></li>
         			<li> <a href="#contact">NEWS&nbsp;</a></li>
       			</ul>
