--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
   <p>
     Update Log for Main Versions:
     <br>
-    Version 3.0.5
+    Version Alpha 0.2
     <br>
     <ul>
+      <li>Add Real Time Showcase.</li>
       <li>Use newly designed wallpapers.</li>
       <li>Unify site formatting.</li>
       <li>Complete the preparation of the first chapter.</li>
