--- a/server_files/Learn/Artificial Intelligence.html
+++ b/server_files/Learn/Artificial Intelligence.html
@@ -35,7 +35,7 @@
         <ul>
             <li style="font-size: 1.1em; padding-right: 5px;"><img src="../../icons/favicon.ico" alt="icon" style="width: 20px; height: 20px; vertical-align: middle; padding-right: 5px;">HTML Learn</li>
             <li>|</li>
-            <li style="font-size: 1.1em; padding-right: 5px;"><a href="../../index3.html" class="noClickOn">index</a></li>
+            <li style="font-size: 1.1em; padding-right: 5px;"><a href="../../.oldIndex/index3.html" class="noClickOn">index</a></li>
             <li>|</li>
             <li style="padding-right: 1.1em; padding-right: 5px;"><a href="../Directory/MainPage.html"></a></li>
         </ul>
