--- a/server_files/P01/01.html
+++ b/server_files/P01/01.html
@@ -23,7 +23,7 @@
 	<ul>
 		<li style="font-size: 1.1em">HyperText Introduce Software Corp</li>
 		<li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
-		<li><a href="../../index3.html">Company Introduce</a></li>
+		<li><a href="../../.oldIndex/index3.html">Company Introduce</a></li>
 		<li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
 		<li><a href="../Directory/MainPage.html">Index</a></li>
 	</ul>
