--- a/server_files/Directory/MainPage.html
+++ b/server_files/Directory/MainPage.html
@@ -14,9 +14,13 @@
   	<ul>
     	<li style="font-size: 1.1em">HyperText Introduce Software Corp</li>
     	<li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
-    	<li><a href="../../index3.html">Company Introduce</a></li>
+    	<li><a href="../../.oldIndex/index3.html">Company Introduce</a></li>
     	<li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
     	<li><a href="../Directory/MainPage.html">Index</a></li>
+		<li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
+		<li>Welcome! Now is <script>
+			setInterval("jnkc.innerHTML=new Date().toLocaleString()+'日一二三四五六'.charAt(new Date().getDate());",1000);
+		</script></li>
   	</ul>
   	</div>
 		<h1>Contents</h1>
