--- a/server_files/Directory/MainPage.html
+++ b/server_files/Directory/MainPage.html
@@ -18,9 +18,11 @@
     	<li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
     	<li><a href="../Directory/MainPage.html">Index</a></li>
 		<li>&nbsp;&nbsp;|&nbsp;&nbsp;</li>
-		<li>Welcome! Now is <script>
+		<li>Welcome! Now is
+			<script>
 			setInterval("jnkc.innerHTML=new Date().toLocaleString()+'日一二三四五六'.charAt(new Date().getDate());",1000);
-		</script></li>
+			</script>
+		</li>
   	</ul>
   	</div>
 		<h1>Contents</h1>
