--- a/index.html
+++ b/index.html
@@ -68,12 +68,9 @@
     <h1>Welcome to HTML 5 home!</h1>
     <p><a href=".\server_files\Directory\MainPage.html">Continue</a></p>
 	<br><br><br><br>
-	<p style="color: darkgrey; font-size: 1.2em; text-decoration: underline;">We're updating our website to a new view. <a style="text-decoration: darkgrey underline;" href="server_files/Directory/NewLearn.html">Learn More</a>&nbsp;|&nbsp;Version: 3.0.5.96</p>
-  <p>
-    Update Log for Main Versions:
-    <br>
-    Version Alpha 0.2
-    <br>
+    <p style="color:blue; padding-bottom: 0px">
+    <strong>Alpha 0.2</strong> Update log
+    </p>
     <ul>
       <li>Add Real Time Showcase.</li>
       <li>Use newly designed wallpapers.</li>
@@ -82,6 +79,5 @@
       <li>Added resident directory bar and title bar.</li>
       <li>Optimize for details.</li>
     </ul>
-  </p>
 </body>
 </html>
