--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>IT Home</title>
+  <title>IT Home - Dev</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="shortcut icon" href="icons/favicon.ico" />
   <link href="css/fonts.css" rel="stylesheet">
@@ -65,7 +65,7 @@
   </style>-->
 </head>
 <body>
-    <h1>Welcome to HTML 5 home!</h1>
+    <h1>Welcome!</h1>
     <p><a href=".\server_files\Directory\MainPage.html">Continue</a></p>
 	<br><br><br><br>
     <p style="color:blue; padding-bottom: 0px">
@@ -79,5 +79,6 @@
       <li>Added resident directory bar and title bar.</li>
       <li>Optimize for details.</li>
     </ul>
+    <p>Supported by <a href="www.github.com">Github</a> Pages.</p>
 </body>
 </html>
